media query fixed to display content better on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,6 @@ body    {
 
 @media (max-width: 1440px) {
     #results    {
-        font-size: 80%;
+        font-size: 70%;
     }
 }
